--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   line-height: 28px;
   color: #6a6a6a;
   font-size: 14px;
-  background-color: #eff2f1; }
+  background-color: #f2f0ef; }
 
 a {
   text-decoration: none;
